fixed background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,7 +108,7 @@ input, select, textarea {
 		*/
 		
 		
-		background-color: #ffffff;
+		background-color: #00f2fe;
 		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #00f2fe 15%, #4facfe 85%);
 		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #00f2fe 15%, #4facfe 85%);
 		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #00f2fe 15%, #4facfe 85%);
@@ -130,7 +130,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #ffffff;
+		background-color: #00f2fe;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
